icon & text collapsing issue fiexd

--- a/src/tailwindcss/output.css
+++ b/src/tailwindcss/output.css
@@ -727,6 +727,22 @@ video {
   margin-top: -30px;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .block {
   display: block;
 }
